<?xml version="1.0" encoding="utf-8"?>
<!--     CENG-322-0NC Francisco Santos n01423860, Pradeep Singh n00975892-->
<!--     CENG-322-0NB Ralph Robes n01410324, Elijah Tanimowo n01433560-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/purple_graident_wallpaper_v2"
    tools:context=".LoginSetup.LoginFragment"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nika_login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24_state"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page_loginButton"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:fontFamily="@font/press_start_2p"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">
            <!--username edittextboox-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_email_loginFrag"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nika_edittext_username_loginFrag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:fontFamily="@font/press_start_2p"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:background="@drawable/custom_edittextbox"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--password edittextboox-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_page_password"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconCheckable="false"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nika_edittext_pwd_loginFrag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:fontFamily="@font/press_start_2p"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:background="@drawable/custom_edittextbox"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <CheckBox
                    android:id="@+id/rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/login_page_remember_me"
                    android:buttonTint="@color/black"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/nika_btn_forgotPwd_loginFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="Forgot Password"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <!-- loging button -->

            <!--Title login with -->
            <Button
                android:id="@+id/nika_btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button_version3_state"
                android:text="@string/login_page_loginButton"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/nika_btn_login_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:background="#0000"
                android:text="@string/login_page_registerButton"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/title_loign_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/muli_bold_italic"
                    android:text="@string/login_with_loginFrag"
                    android:textStyle="bold" />
            </RelativeLayout>

            <!-- create a sign in function-->
            <LinearLayout
                android:id="@+id/google_signIn_btn_logiBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_google_state"
                android:layout_marginTop="100dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginVertical="@dimen/cardview_compat_inset_shadow">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google_seeklogo"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_loginFrag"
                    android:textStyle="bold"
                    android:textSize="20dp" />


            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/framLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</ScrollView>